--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">CornetTask</string>
     <string name="no_movies_found">No Movies Found</string>
+    <string name="connection_problem">Connection Problem!!</string>
 
 </resources>
