--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CornetTask</string>
     <string name="no_movies_found">No Movies Found</string>
     <string name="connection_problem">Connection Problem!!</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="search">Search</string>
+    <string name="discover">Discover</string>
+    <string name="movie_name">Movie Name</string>
 </resources>
