show list when empty edittext

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search">Search</string>
     <string name="discover">Discover</string>
     <string name="movie_name">Movie Name</string>
+    <string name="movie_empty">Please enter movie name</string>
 </resources>
